data/derived/comb/progs/unify/prog4880.ml.out
Characters 171-192:
  removeZero (add (padZero l1 l2));;
             ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type (int list * int list) list
       but an expression was expected of type int list
       Type int list * int list is not compatible with type int 
